[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.115.0",
    "grpcio-tools>=1.68.0",
    "grpcio>=1.68.0",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
    "pandas>=2.2.2",
    "pandera[mypy]>=0.20.4",
    "protobuf>=5.28.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "redis>=5.0.8",
    "rich>=13.8.1",
    "pyarrow>=18.0.0",
]

[tool.mypy]
exclude = "src/common/protobufs"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.24.0",
    "mypy-protobuf>=3.6.0",
    "types-protobuf>=5.28.3.20241030",
    "grpc-stubs>=1.53.0.5",
    "asyncpg-stubs>=0.29.1",
]
