[project]
name = "rules_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
    "pandas>=2.2.2",
    "pandera[mypy]>=0.20.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "redis>=5.0.8",
    "rich>=13.8.1",
]
