[project]
name = "rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio-tools>=1.68.0",
    "grpcio>=1.68.0",
    "pandas>=2.2.2",
    "protobuf>=5.28.3",
    "rich>=13.8.1",
    "watchdog[watchmedo]>=6.0.0",
    "common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rules"]

[tool.uv.sources]
common = { path = "../common", editable = true }


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.mypy]
check_untyped_defs = true
follow_imports= "normal"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable= false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.24.0",
    "mypy-protobuf>=3.6.0",
    "types-protobuf>=5.28.3.20241030",
    "grpc-stubs>=1.53.0.5",
    "asyncpg-stubs>=0.29.1",
]
