[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["PatrikTison <patriktison@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
