[tool.poetry]
name = "postgres-seed"
version = "0.1.0"
description = ""
authors = ["PatrikTison <patriktison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "2.0.21"
uvicorn = { version = "0.23.2", extras = ["standard"]}
asyncpg = "0.28.0"
alembic = "1.12.0"
httpx = "*"
pytest-cov = "*"
pytest-asyncio = "*"
uvloop = "*"
httptools = "*"
rich = "*"

pandas = "^2.0.3"
pytest-mock = "^3.11.1"


[tool.poetry.dev-dependencies]
devtools = { extras = ["pygments"], version = "*" }
black = "*"
safety = "*"
pyupgrade = "*"
ipython = "*"
ruff = "*"
isort = "^5.12.0"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

select = ["E", "F", "UP", "N", "C", "B"]

# Exclude a variety of commonly ignored directories.
exclude = ["alembic",]
# Assume Python 3.10.
target-version = "py311"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends",]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --doctest-glob=*.md --ignore=alembic"
asyncio_mode = "strict"
env_files = [".env"]

[tool.tryceratops]
exclude = ["alembic",]
